fix(XML Parsing): handle URI instead of URL